--- a/view/login_projet/inscription/inscription.html
+++ b/view/login_projet/inscription/inscription.html
@@ -13,7 +13,7 @@
             <input type="text" placeholder="Nom login" name="login"/>
             <input type="text" placeholder="Mot de passe" name="pass"/>
             <button>create</button>
-            <p class="message">Already registered? <a href="http://localhost/project/master/view/login%20projet/login.html">Sign In</a></p>
+            <p class="message">Already registered? <a href="http://localhost/project/master/view/login_projet/login.html">Sign In</a></p>
         </form>
 
         </div>
