--- a/view/login_projet/login.html
+++ b/view/login_projet/login.html
@@ -10,7 +10,7 @@
             <input type="text" placeholder="username" name="login"/>
             <input type="password" placeholder="password" name="pass"/>
             <button>login</button>
-            <p class="message">Not registered? <a href="http://localhost/project/master/view/login%20projet/inscription/inscription.html">Create an account</a></p>
+            <p class="message">Not registered? <a href="http://localhost/project/master/view/login_projet/inscription/inscription.html">Create an account</a></p>
         </form>
         </div>
         </div>
