--- a/view/back/login_projet/login.html
+++ b/view/back/login_projet/login.html
@@ -6,7 +6,7 @@
     <body>
         <div class="login-page">
         <div class="form">
-        <form class="login-form" method="POST" action="inscription..html">
+        <form class="login-form" method="POST" action="login.php">
             <input type="text" placeholder="username" name="login"/>
             <input type="password" placeholder="password" name="password"/>
             <button>login</button>
